--- a/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
+++ b/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
@@ -26,67 +26,8 @@ Project File Date:  02/21/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Rebuild target 'ProjectCube'
-compiling FuzzyV1_F4.c...
-..\Src\FuzzyV1_F4.c(226): warning:  #144-D: a value of type "const char *" cannot be used to initialize an entity of type "const signed char *"
-     FuzzyV1_F4_RuleBase_pre,
-..\Src\FuzzyV1_F4.c: 1 warning, 0 errors
-assembling startup_stm32f767xx.s...
-compiling NumType_F4.c...
-compiling pid_controller.c...
-compiling fuzzy_F4.c...
-compiling stm32f7xx_hal_pcd_ex.c...
-compiling pid_regler.c...
-..\Src\pid_regler.c(35): warning:  #1-D: last line of file ends without a newline
-  }
-..\Src\pid_regler.c: 1 warning, 0 errors
-compiling stm32f7xx_hal_msp.c...
-compiling usbd_desc.c...
-compiling MY_FLASH.c...
-compiling usbd_cdc_if.c...
-compiling system_stm32f7xx.c...
-compiling usbd_conf.c...
-compiling stm32f7xx_hal_pcd.c...
-compiling stm32f7xx_hal_rcc.c...
-compiling stm32f7xx_it.c...
-compiling usb_device.c...
-compiling stm32f7xx_ll_usb.c...
-compiling stm32f7xx_hal_rcc_ex.c...
-compiling main.c...
-../Src/main.c(185): warning:  #177-D: variable "setval"  was declared but never referenced
-  	int setval = 0;
-../Src/main.c(190): warning:  #550-D: variable "uwtick_Hold100ms_freigabe"  was set but never used
-  	static int32_t uwtick_Hold100ms_freigabe; 
-../Src/main.c(191): warning:  #550-D: variable "uwtick_Hold1s_freigabe"  was set but never used
-  	static int32_t uwtick_Hold1s_freigabe;
-../Src/main.c: 3 warnings, 0 errors
-compiling stm32f7xx_hal_flash_ex.c...
-compiling stm32f7xx_hal_exti.c...
-compiling stm32f7xx_hal_gpio.c...
-compiling stm32f7xx_hal_cortex.c...
-compiling stm32f7xx_hal_pwr.c...
-compiling stm32f7xx_hal_i2c_ex.c...
-compiling stm32f7xx_hal_adc_ex.c...
-compiling stm32f7xx_hal_flash.c...
-compiling stm32f7xx_hal.c...
-compiling stm32f7xx_hal_dma.c...
-compiling stm32f7xx_hal_pwr_ex.c...
-compiling stm32f7xx_hal_eth.c...
-compiling stm32f7xx_hal_dma_ex.c...
-compiling stm32f7xx_hal_adc.c...
-compiling stm32f7xx_hal_i2c.c...
-compiling stm32f7xx_hal_uart_ex.c...
-compiling usbd_ioreq.c...
-compiling usbd_cdc.c...
-compiling usbd_ctlreq.c...
-compiling usbd_core.c...
-compiling stm32f7xx_hal_tim_ex.c...
-compiling stm32f7xx_hal_uart.c...
-compiling stm32f7xx_hal_tim.c...
-linking...
-Program Size: Code=27176 RO-data=568 RW-data=600 ZI-data=112208  
-FromELF: creating hex file...
-"ProjectCube\ProjectCube.axf" - 0 Error(s), 5 Warning(s).
+Build target 'ProjectCube'
+"ProjectCube\ProjectCube.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -109,7 +50,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.2.0
-Build Time Elapsed:  00:00:15
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
